Fix broken styles

--- a/_sass/_hyde.scss
+++ b/_sass/_hyde.scss
@@ -45,14 +45,6 @@ html {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  color: #313131;
-  letter-spacing: -.025rem;
-}
-
-
 /*
  * Wrapper
  *
@@ -88,7 +80,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-
 /*
  * Masthead
  *
@@ -105,9 +96,11 @@ h1, h2, h3, h4, h5, h6 {
 .masthead-title {
   margin-top: 0;
   margin-bottom: 0;
+  font-size: 1.15rem;
 }
 .masthead-title a {
   color: #fff;
+  text-decoration: none;
 }
 .masthead-title small {
   font-size: 75%;
